[workspace]
members = [
    "programs/*"
]

[patch.crates-io]
solana-runtime = { git = "https://github.com/ckamm/solana.git", branch = "ckamm/test-versioned-transaction" }
solana-program = { git = "https://github.com/ckamm/solana.git", branch = "ckamm/test-versioned-transaction" }
solana-program-test = { git = "https://github.com/ckamm/solana.git", branch = "ckamm/test-versioned-transaction" }
solana-sdk = { git = "https://github.com/ckamm/solana.git", branch = "ckamm/test-versioned-transaction" }
